; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/screenshot/extr_screenshot.c_DoWriteFile.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/screenshot/extr_screenshot.c_DoWriteFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__*, %struct.TYPE_8__* }
%struct.TYPE_6__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32, i8*, i8*, i64, i64, i32 }

@GENERIC_WRITE = common dso_local global i32 0, align 4
@CREATE_ALWAYS = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_NORMAL = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [3 x i8] c"BM\00", align 1
@FILE_CURRENT = common dso_local global i32 0, align 4
@FILE_BEGIN = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_7__*, i32)* @DoWriteFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @DoWriteFile(%struct.TYPE_7__* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_8__, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @GENERIC_WRITE, align 4
  %12 = load i32, i32* @CREATE_ALWAYS, align 4
  %13 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %14 = call i64 @CreateFile(i32 %10, i32 %11, i32 0, i32* null, i32 %12, i32 %13, i32* null)
  store i64 %14, i64* %9, align 8
  %15 = load i64, i64* %9, align 8
  %16 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i64, i64* @FALSE, align 8
  store i64 %19, i64* %3, align 8
  br label %106

20:                                               ; preds = %2
  %21 = load i32, i32* bitcast ([3 x i8]* @.str to i32*), align 1
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 5
  store i32 %21, i32* %22, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 4
  store i64 0, i64* %23, align 8
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 3
  store i64 0, i64* %24, align 8
  %25 = load i64, i64* %9, align 8
  %26 = call i64 @WriteFile(i64 %25, %struct.TYPE_8__* %6, i32 48, i32* %8, i32* null)
  store i64 %26, i64* %7, align 8
  %27 = load i64, i64* %7, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %20
  %30 = load i32, i32* %8, align 4
  %31 = sext i32 %30 to i64
  %32 = icmp ult i64 %31, 48
  br i1 %32, label %33, label %34

33:                                               ; preds = %29, %20
  br label %95

34:                                               ; preds = %29
  %35 = load i64, i64* %9, align 8
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %36, i32 0, i32 0
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 0
  %40 = call i64 @WriteFile(i64 %35, %struct.TYPE_8__* %39, i32 4, i32* %8, i32* null)
  store i64 %40, i64* %7, align 8
  %41 = load i64, i64* %7, align 8
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %47

43:                                               ; preds = %34
  %44 = load i32, i32* %8, align 4
  %45 = sext i32 %44 to i64
  %46 = icmp ult i64 %45, 4
  br i1 %46, label %47, label %48

47:                                               ; preds = %43, %34
  br label %95

48:                                               ; preds = %43
  %49 = load i64, i64* %9, align 8
  %50 = load i32, i32* @FILE_CURRENT, align 4
  %51 = call i8* @SetFilePointer(i64 %49, i32 0, i32 0, i32 %50)
  %52 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 2
  store i8* %51, i8** %52, align 8
  %53 = load i64, i64* %9, align 8
  %54 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %55 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %54, i32 0, i32 1
  %56 = load %struct.TYPE_8__*, %struct.TYPE_8__** %55, align 8
  %57 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %58 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %57, i32 0, i32 0
  %59 = load %struct.TYPE_6__*, %struct.TYPE_6__** %58, align 8
  %60 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 8
  %63 = call i64 @WriteFile(i64 %53, %struct.TYPE_8__* %56, i32 %62, i32* %8, i32* null)
  store i64 %63, i64* %7, align 8
  %64 = load i64, i64* %7, align 8
  %65 = icmp ne i64 %64, 0
  br i1 %65, label %66, label %75

66:                                               ; preds = %48
  %67 = load i32, i32* %8, align 4
  %68 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %69 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %68, i32 0, i32 0
  %70 = load %struct.TYPE_6__*, %struct.TYPE_6__** %69, align 8
  %71 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %70, i32 0, i32 0
  %72 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %71, i32 0, i32 0
  %73 = load i32, i32* %72, align 8
  %74 = icmp slt i32 %67, %73
  br i1 %74, label %75, label %76

75:                                               ; preds = %66, %48
  br label %95

76:                                               ; preds = %66
  %77 = load i64, i64* %9, align 8
  %78 = load i32, i32* @FILE_CURRENT, align 4
  %79 = call i8* @SetFilePointer(i64 %77, i32 0, i32 0, i32 %78)
  %80 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 1
  store i8* %79, i8** %80, align 8
  %81 = load i64, i64* %9, align 8
  %82 = load i32, i32* @FILE_BEGIN, align 4
  %83 = call i8* @SetFilePointer(i64 %81, i32 0, i32 0, i32 %82)
  %84 = load i64, i64* %9, align 8
  %85 = call i64 @WriteFile(i64 %84, %struct.TYPE_8__* %6, i32 48, i32* %8, i32* null)
  store i64 %85, i64* %7, align 8
  %86 = load i64, i64* %7, align 8
  %87 = icmp ne i64 %86, 0
  br i1 %87, label %88, label %92

88:                                               ; preds = %76
  %89 = load i32, i32* %8, align 4
  %90 = sext i32 %89 to i64
  %91 = icmp ult i64 %90, 48
  br i1 %91, label %92, label %93

92:                                               ; preds = %88, %76
  br label %95

93:                                               ; preds = %88
  %94 = load i64, i64* @TRUE, align 8
  store i64 %94, i64* %3, align 8
  br label %106

95:                                               ; preds = %92, %75, %47, %33
  %96 = call i32 (...) @GetError()
  %97 = load i64, i64* %9, align 8
  %98 = icmp ne i64 %97, 0
  br i1 %98, label %99, label %102

99:                                               ; preds = %95
  %100 = load i64, i64* %9, align 8
  %101 = call i32 @CloseHandle(i64 %100)
  br label %102

102:                                              ; preds = %99, %95
  %103 = load i32, i32* %5, align 4
  %104 = call i32 @DeleteFile(i32 %103)
  %105 = load i64, i64* @FALSE, align 8
  store i64 %105, i64* %3, align 8
  br label %106

106:                                              ; preds = %102, %93, %18
  %107 = load i64, i64* %3, align 8
  ret i64 %107
}

declare dso_local i64 @CreateFile(i32, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i64 @WriteFile(i64, %struct.TYPE_8__*, i32, i32*, i32*) #1

declare dso_local i8* @SetFilePointer(i64, i32, i32, i32) #1

declare dso_local i32 @GetError(...) #1

declare dso_local i32 @CloseHandle(i64) #1

declare dso_local i32 @DeleteFile(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
